locadora/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locadora-ingress
  namespace: locadora

spec:
  rules:
    - host: locadora.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locadora-api
                port:
                  number: 80
